Changes addressing feedback to https://reviews.apache.org/r/43732/

--- a/samza-hdfs/src/test/resources/samza-hdfs-test-job-avro.properties
+++ b/samza-hdfs/src/test/resources/samza-hdfs-test-job-avro.properties
@@ -14,12 +14,5 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
-group=org.apache.samza
-version=0.10.1-SNAPSHOT
-scalaVersion=2.10
 
-gradleVersion=2.0
-
-org.gradle.jvmargs="-XX:MaxPermSize=512m"
-
-systemProp.file.encoding=utf-8
+systems.samza-hdfs-test-job-text.producer.hdfs.writer.class=org.apache.samza.system.hdfs.writer.AvroDataFileHdfsWriter
