--- a/gradle/dependency-versions.gradle
+++ b/gradle/dependency-versions.gradle
@@ -29,8 +29,8 @@
   metricsVersion = "2.2.0"
   kafkaVersion = "0.8.2.1"
   commonsHttpClientVersion = "3.1"
-  rocksdbVersion = "3.13.1-MINE"
-  yarnVersion = "2.7.1"
+  rocksdbVersion = "3.13.1"
+  yarnVersion = "2.6.1"
   slf4jVersion = "1.6.2"
   log4jVersion = "1.2.17"
   guavaVersion = "17.0"
